Fix the width of the logos so content doesn't shift as they're loading.

--- a/static/css/inbox.less
+++ b/static/css/inbox.less
@@ -91,9 +91,11 @@ body {
     opacity: 0.9;
     padding: 0.15em 1.25em;
     img {
+      width: 14.2em;
       height: 3.8em;
     }
     .logo-icon {
+      width: 2.5em;
       display: none;
     }
   }
